# cmake-template-pybind11

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
example_package/: __init__.py
src/: main.cpp  test.cpp  test.h
src/dev/: python.cpp
tests/: test_import.py
